media/radarr/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  annotations:
    flux.weave.works/tag.radarr: glob:amd64-*-ls*
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: radarr
    spec:
      volumes:
      - name: radarr
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:radarr
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: media
        persistentVolumeClaim:
          claimName: media
      containers:
      - name: radarr
        image: linuxserver/radarr:amd64-v0.2.0.1293-ls3
        volumeMounts:
        - name: radarr
          subPath: config
          mountPath: /config
        - name: media
          mountPath: /media
        ports:
        - name: radarr
          containerPort: 7878
        readinessProbe:
          tcpSocket:
            port: radarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: radarr
          initialDelaySeconds: 15
          periodSeconds: 20
