media/radarr/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: media
spec:
  serviceName: radarr
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        rclone-mounts: "true"
    spec:
      nodeName: knode1
      dnsConfig:
        options:
          - name: ndots
            value: "1"

      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - pms
              topologyKey: "kubernetes.io/hostname"

      containers:
        - name: radarr
          # IMAGE=ghcr.io/linuxserver/radarr; skopeo --override-os linux list-tags "docker://${IMAGE}" | jq -r '.Tags[]' | grep '^version-5' | sort -V | tail -n1
          image: ghcr.io/linuxserver/radarr:version-5.26.2.10099
          # image: alpine
          # command: ["sleep"]
          # args: ["infinity"]

          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              # cpu: "500m"
              memory: "2Gi"

          volumeMounts:
            - name: radarr
              subPath: config
              mountPath: /config
            - name: media-nfs
              mountPath: /media
            - name: scratch
              mountPath: /downloads
              subPath: downloads

          ports:
            - name: http
              containerPort: 7878

          # livenessProbe:
          #   exec:
          #     command:
          #       - sh
          #       - -c
          #       - test -f /media/.anchors/dropbox
          #   periodSeconds: 10
          #   failureThreshold: 3

          startupProbe:
            httpGet:
              port: http
              path: /
            periodSeconds: 10
            failureThreshold: 30

      volumes:
        - name: radarr
          persistentVolumeClaim:
            claimName: radarr-pv-claim
        - name: scratch
          persistentVolumeClaim:
            claimName: scratch
        - name: media-nfs
          persistentVolumeClaim:
            claimName: media
