media/radarr/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-tailscale
  namespace: media
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  tls:
  - hosts:
    - wretched-degree
  defaultBackend:
    service:
      name: radarr
      port:
        name: http
  ingressClassName: tailscale
