media/radarr/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "2m"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
spec:
  tls:
    - hosts:
        - f.desertbluffs.com
  rules:
    - host: f.desertbluffs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: radarr
              servicePort: radarr
