media/radarr/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: radarr
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: radarr
  ingress:
  - ports:
    - port: http
    from: []
