media/radarr/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: radarr
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: radarr
  ingress:
  - ports:
    - port: 7878
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
